--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+<head>
+  <!-- Meta tags for charset, viewport, and theme -->
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
+  <meta name="theme-color" content="#000000" />
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+  <!-- Description and other SEO meta tags -->
+  <meta name="description" content="Vinay Reddy's Portfolio - A Web Developer" />
+  <meta name="keywords" content="Vinay Reddy, Portfolio, Web Developer, React Developer, JavaScript, HTML, CSS, Frontend Developer, FullStack Developer, MERN, MERN Stack Developer, Node.Js, Express.Js, MongoDb, Developer, Backend Developer" />
+  
+  <!-- Favicon & Icons -->
+  <link rel="icon" href="favicon.ico" />
+  <link rel="apple-touch-icon" href="favicon.ico" />
+  
+  <!-- Open Graph meta tags for social media sharing -->
+  <meta property="og:title" content="Vinay Reddy Portfolio" />
+  <meta property="og:description" content="A showcase of web development projects by Vinay Reddy" />
+  <meta property="og:image" content="%PUBLIC_URL%/og-image.jpg" />
+  <meta property="og:url" content="https://vinayreddy.com" />
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  </body>
+  <!-- Twitter meta tags for Twitter card -->
+  <meta name="twitter:title" content="Vinay Reddy Portfolio" />
+  <meta name="twitter:description" content="A showcase of web development projects by Vinay Reddy" />
+  <meta name="twitter:image" content="%PUBLIC_URL%/og-image.jpg" />
+  <meta name="twitter:card" content="summary_large_image" />
+  
+  <!-- Title of the page -->
+  <title>Vinay Reddy</title>
+
+  <!-- Google Fonts - If using custom fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+
+  <!-- Stylesheets and external resources can be added here -->
+  <link rel="stylesheet" href="%PUBLIC_URL%/styles.css" />
+</head>
+
+<body>
+  <!-- Accessibility: Notify user to enable JavaScript -->
+  <noscript>
+    <strong>We're sorry, but this website requires JavaScript to work properly. Please enable JavaScript and reload the page.</strong>
+  </noscript>
+
+  <!-- Main React app root -->
+  <div id="root"></div>
+
+  <!-- Script tags are automatically handled by React's build process -->
+  <!-- You can include any analytics or custom scripts here -->
+  <!-- Example: Google Analytics or other tracking scripts -->
+
+  <!-- Additional script tags or custom JS (optional) -->
+  <!-- <script src="path/to/external/script.js"></script> -->
+
+</body>
+
 </html>
